# invoforge-stellar

./: .gitignore  CONTRIBUTING.md  README.md  jest.config.js  package-lock.json  package.json  tailwind.config.js
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml
__mocks__/: stellar-sdk.ts  stellar-wallets-kit.ts
__tests__/components/: BalanceDisplay.test.tsx  PaymentForm.test.tsx  WalletConnection.test.tsx
app/: globals.css  layout.tsx  page.tsx
components/: BalanceDisplay.tsx  BonusFeatures.tsx  PaymentForm.tsx  SorobanWalletConnect.tsx  TransactionHistory.tsx  WalletConnection.tsx  example-components.tsx
lib/: contract.ts  stellar-helper.ts
scripts/: test-contract.ts
smart-contract/: Cargo.toml  README.md
smart-contract/src/: lib.rs
