[package]
name = "invoforge-contract"
version = "0.1.0"
edition = "2021"

[profile.release]
overflow-checks = true
opt-level = "z"
debug = false
strip = "symbols"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
